--- a/HydroApp/HydroApp.csproj
+++ b/HydroApp/HydroApp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="data.db" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
